@@ -24,6 +24,8 @@ files_identical("$Self->{obj_dir}/t_sys_file_basic_mcd_test2_1.dat",
                 "$Self->{t_dir}/t_sys_file_basic_mcd_test2_1.dat");
 files_identical("$Self->{obj_dir}/t_sys_file_basic_mcd_test2_2.dat",
                 "$Self->{t_dir}/t_sys_file_basic_mcd_test2_2.dat");
+files_identical("$Self->{obj_dir}/t_sys_file_basic_mcd_test5.dat",
+                "$Self->{t_dir}/t_sys_file_basic_mcd_test5.dat");
 
 ok(1);
 1;
